// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot 테스트 > 타이틀만 있는 헤더 스냅샷 1`] = `
<div>
  <header>
    <h1>
      로비
    </h1>
  </header>
</div>
`;

exports[`Snapshot 테스트 > 헤더 컴포넌트 스냅샷 1`] = `
<div>
  <header>
    <h1>
      게임
    </h1>
    <p>
      Tic Tac Toe
    </p>
  </header>
</div>
`;
